[package]
name = "sdp-nom"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2018"
description = "a statically typed sdp-parser based on nom"
license = "MIT/Apache-2.0"

[dependencies]
nom = "7"
wee_alloc = { version = "0.4", optional = true }
enum-as-inner = "0.3"
derive-into-owned = "0.2"

[dependencies.ufmt]
version = "0.1"
features = ["std"]
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.rmp-serde]
version = "0.15"
optional = true

[dev-dependencies]
cfg-if = "1"
pretty_assertions = "1"
serde_json = "1"

[features]
default = ["udisplay"]
udisplay = ["ufmt"]
wee = ["wee_alloc"]
msg_pack = ["rmp-serde", "serde"]

[profile.release]
lto = true
opt-level = 's' # try 'z' (size) or 's' (speed)
panic = "abort"

[package.metadata]
wasm-opt = false # in release builds wasm-opt crashes for some reason

[[example]]
name = "json_filtered"
required-features = ["serde_json"]
