[package]
name = "sdp-nom"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2021"
description = "an sdp-parser"
license = "MIT/Apache-2.0"
repository = "https://github.com/hoodie/sdp-nom"
documentation = "https://docs.rs/sdp-nom"
keywords = ["webrtc", "sdp"]

include = [
    "README.md",
    "CHANGELOG.md",
    "LICENSE-*",
    "src/**/*.rs",
    "examples/**/*.rs",
    "tests/**/*.rs",
]

[features]
default = ["udisplay"]
udisplay = ["ufmt"]
debug = []
wee = ["wee_alloc"]
msg_pack = ["rmp-serde", "serde"]

[dependencies]
nom = "7"
wee_alloc = { version = "0.4", optional = true }
enum-as-inner = "0.3"
derive-into-owned = "0.2"

[dependencies.ufmt]
version = "0.1"
features = ["std"]
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.rmp-serde]
version = "0.15"
optional = true

[dev-dependencies]
cfg-if = "1"
pretty_assertions = "1"
serde_json = "1"

[profile.release]
lto = true
opt-level = 's' # try 'z' (size) or 's' (speed)
panic = "abort"

[package.metadata]
wasm-opt = false # in release builds wasm-opt crashes for some reason

[[example]]
name = "session"
required-features = ["udisplay"]

[[example]]
name = "remove_direct_tcp_candidates"
required-features = ["udisplay"]

[[example]]
name = "remove_direct_tcp_candidates_iter"
required-features = ["udisplay"]

[[example]]
name = "reparse"
required-features = ["udisplay"]

[[example]]
name = "iter"
required-features = ["udisplay"]

[[example]]
name = "json_filtered"
required-features = ["serde", "udisplay"]
